--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('mental image');
+  background-image: url('istockphoto-1357255073-612x612.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
